--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "node-sass": "node-sass",
-    "sass": "node-sass src/styles/main.scss src/app/style.css"
+    "sass": "node-sass -wr src/styles/main.scss src/app/style.css"
   },
   "dependencies": {
     "next": "13.5.6",
