--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "next": "13.5.6",
     "node-sass": "^9.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
